--- a/Task2/style.css
+++ b/Task2/style.css
@@ -29,6 +29,41 @@
 .bg-color-lgreen{
     background-color: #D5E8D4;
 }
+.bg-color-orange{
+    background-color: orange;
+}
+.border-left{
+    border-left: solid;
+}
+.border-bottom{
+    border-bottom: solid;
+}
+.font-w-bold{
+    font-weight: bold;
+}
+.fs-1 {
+    font-size: 49px;
+}
+
+.fs-2 {
+    font-size: 42px;
+}
+
+.fs-3 {
+    font-size: 35px;
+}
+
+.fs-4 {
+    font-size: 28px;
+}
+
+.fs-5 {
+    font-size: 20px;
+}
+
+.fs-6 {
+    font-size: 16px;
+}
 /*desktop*/
 @media (min-width: 993px) {
     .col-lg-1 {
