--- a/Task3/style.css
+++ b/Task3/style.css
@@ -10,4 +10,17 @@
 main{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 3em;
+    padding: 0 5%;
+}
+inner {
+    background-color: #D5E8D4;
+    border: solid 3px black;
+    display: grid;
+    grid-template: repeat(2, 1fr);
+}
+main inner p {
+    padding: 4%;
+    line-height: 1.65;
+    font-size: 1.15em;
 }
