--- a/Task3/style.css
+++ b/Task3/style.css
@@ -7,11 +7,19 @@
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
 }
+h1{
+    text-align: center;
+    font-size: 28px;
+    font-weight: bold;
+    margin-top: 30px;
+}
 main{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding: 0 5%;
     grid-column-gap: 45px;
+    grid-row-gap: 45px;
+    margin-top: 30px;
 }
 inner {
     background-color: #D5E8D4;
@@ -43,7 +51,31 @@ main cont inner p {
     border-bottom: solid 3px black;
     border-left: solid 3px black;
     justify-self: end;
-    padding: 2% 4%;
+    padding: 0 4%;
     font-size: 15px;
     font-weight: bold;
+}
+
+@media (min-width: 993px) {
+    main {
+        grid-template: 1fr / repeat(3, 1fr);
+    }
+}
+
+@media (min-width: 769px) and (max-width: 992px) {
+    main {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    main cont:last-child{
+        grid-column: 1/3;
+    }
+}
+@media (max-width: 769px) {
+    main {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .main div:last-child{
+    }
 }
